# gasmon-hello-world

./: .gitignore  README.rst  average_values.csv  average_values.xlsx  average_values_per_location.csv  average_values_per_minute.csv  pyproject.toml
gasmon/: __init__.py  config.yaml  configuration.py  locations.py  pipeline.py  receiver.py  sink.py
tests/: test_locations.py  test_receiver.py
