[tool.poetry]
name = "gasmon"
version = "0.1.0"
description = ""
authors = ["Sam Cappleman-Lynes <sam.cappleman-lynes@softwire.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.1"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
start = "gasmon:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
